--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
   display: none !important;
 }
 
+/* MARK: Status */
 /* Toggle button text styling */
 .status-text {
   position: absolute;
@@ -16,106 +17,45 @@
   margin-bottom: 1rem;
   /* Adjust size as needed */
 }
-
 .status-text.paid {
   color: green;
   /* Or any color you prefer for 'paid' status */
 }
-
 .status-text.unpaid {
   color: red;
   /* Or any color you prefer for 'unpaid' status */
 }
 
-/* Style the scrollbar track */
-.invoice-list::-webkit-scrollbar-track {
-  background-color: #f5f5f5; /* Light grey track */
-  border-radius: 10px;
-}
-
-/* Style the scrollbar thumb */
-.invoice-list::-webkit-scrollbar-thumb {
-  background-color: #a7a7a7; /* Dark grey thumb */
-  border-radius: 10px;
-}
-
-/* Handle hover and active states */
-.invoice-list::-webkit-scrollbar-thumb:hover {
-  background: #7e7e7e; /* Darker grey on hover */
-}
-
-/* Adjust the width here */
-.invoice-list::-webkit-scrollbar {
-  width: 10px;
-}
-
-.modal-overlay {
-  position: fixed; /* Fixed position to cover the entire viewport */
-  top: 0;
-  left: 0;
-  width: 100vw; /* Full viewport width */
-  height: 100vh; /* Full viewport height */
-  background-color: rgba(0, 0, 0, 0.4); /* Semi-transparent black background */
-  display: flex; /* Flexbox to center the modal */
-  justify-content: center;
-  align-items: center;
-  z-index: 50; /* High z-index to overlay on top of other content */
-}
-
-#stylesTableSearchBarDiv {
-  position: sticky;
-  top: 0px;
-  padding-top: 4px; /* Adjust this if you need some space above the search bar */
-  z-index: 20; /* Higher z-index than the table headers */
-  background-color: white;
-}
-/* Sticky Table Header */
-.sticky-th {
-  position: sticky;
-  top: 28px; /* Pull the header up */
-  background-color: white;
-  z-index: 10; /* Keep it above other content */
-  margin-top: -20px; /* Negative margin to pull the content up */
-  padding-top: 20px; /* Add padding to compensate for the negative margin */
-}
-
-/* MAIN-SCROLLBAR */
+/* MARK: Scrollbar */
+/* Global */
 ::-webkit-scrollbar {
   width: 16px; /* Adjust the width of the scrollbar */
 }
-
 /* Light mode */
 ::-webkit-scrollbar-track {
   background: #475569;
 }
-
 ::-webkit-scrollbar-thumb {
   background: #23232e; /* The draggable scrolling handle */
   border-radius: 5px; /* Roundness of the scrollbar handle */
 }
-
 ::-webkit-scrollbar-thumb:hover {
   background: #1a1a23; /* Hover effect */
 }
-
 /* Dark mode scrollbars */
 .dark ::-webkit-scrollbar-track {
   background: #404040;
 }
-
 .dark ::-webkit-scrollbar-thumb {
   background: #18181b; /* Darker handle for dark mode */
 }
-
 .dark .table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #09090b; /* Hover effect for dark mode */
 }
-
-/* Class for TABLES SCROLLBAR */
+/* MARK: Table Scrollbar */
 .table-scrollbar::-webkit-scrollbar {
   width: 12px; /* Adjust the width of the scrollbar */
 }
-
 /* Light mode */
 .table-scrollbar::-webkit-scrollbar-track {
   background: #475569;
@@ -123,66 +63,52 @@
   margin-bottom: 8px !important;
   border-radius: 5px;
 }
-
 .table-scrollbar::-webkit-scrollbar-thumb {
   background: #23232e; /* The draggable scrolling handle */
   border-radius: 5px; /* Roundness of the scrollbar handle */
 }
-
 .table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #1a1a23; /* Hover effect */
 }
-
 /* Dark mode scrollbars */
 .dark .table-scrollbar::-webkit-scrollbar-track {
   background: #404040;
 }
-
 .dark .table-scrollbar::-webkit-scrollbar-thumb {
   background: #18181b; /* Darker handle for dark mode */
 }
-
 .dark .table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #2c2c31; /* Hover effect for dark mode */
 }
-
-/* Class for TABLES SCROLLBAR */
+/* MARK: Alternative Scrollbar */
 .alt-table-scrollbar::-webkit-scrollbar {
   width: 12px; /* Adjust the width of the scrollbar */
 }
-
 /* Light mode */
 .alt-table-scrollbar::-webkit-scrollbar-track {
   background: #475569;
   border-radius: 4px;
 }
-
 .alt-table-scrollbar::-webkit-scrollbar-thumb {
   background: #23232e; /* The draggable scrolling handle */
   border-radius: 4px; /* Roundness of the scrollbar handle */
 }
-
 .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #1a1a23; /* Hover effect */
 }
-
 /* Dark mode scrollbars */
 .dark .alt-table-scrollbar::-webkit-scrollbar-track {
   background: #404040;
 }
-
 .dark .alt-table-scrollbar::-webkit-scrollbar-thumb {
   background: #18181b; /* Darker handle for dark mode */
 }
-
 .dark .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #2c2c31; /* Hover effect for dark mode */
 }
-
 .max-height-table {
   max-height: 700px !important;
 }
-
 /* Removing number input arrows  */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -190,51 +116,19 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 /* Firefox */
 input[type='number'] {
   -moz-appearance: textfield;
 }
 
-/* Popover */
-.popover-container {
-  display: grid;
-  place-items: center; /* Center items in the container */
-  position: absolute;
-  top: -10px; /* Adjust this value to position above the button */
-  left: 50%;
-  transform: translate(
-    -50%,
-    -100%
-  ); /* Moves the container up above the button */
-  z-index: 20;
-}
-
-.popover {
-  position: relative; /* Positioned relative to the arrow */
-}
-
-.arrow {
-  position: absolute;
-  bottom: -5px; /* Adjust to position arrow below the popover */
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  width: 12px;
-  height: 12px;
-  background: #111827;
-  z-index: 10; /* Keeps arrow under the popover */
-}
-
-/* Rotateable icon  */
+/* MARK:Rotateable icon - Symbols  */
 #rotateIcon {
   transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
-
 /* Spin animation */
 .spin {
   animation: spin 0.6s ease-in-out forwards;
 }
-
 /* Keyframes for spin and rebound effect */
 @keyframes spin {
   0% {
@@ -246,36 +140,28 @@ input[type='number'] {
   100% {
     transform: rotate(360deg) scale(1);
   }
-}
-
-/* CSS for the revolve and change color animations */
+} /* CSS for the revolve and change color animations */
 .revolve {
-  animation: revolve 0.3s ease-in-out; /* Duration of revolve*/
-  /* change color here */
-}
-
-/* Keyframes for revolving and changing color */
+  animation: revolve 0.3s ease-in-out; /* Duration of revolve*/ /* change color here */
+} /* Keyframes for revolving and changing color */
 @keyframes revolve {
   0% {
     transform: rotateY(0deg);
     font-weight: normal;
     color: #b8b8b8; /* Original color */
   }
-
   50% {
     transform: rotateY(90deg);
     font-weight: bold;
     color: #3b82f6; /* Color during animation (e.g., red) */
   }
-
   100% {
     transform: rotateY(180deg);
     font-weight: normal;
     color: #b8b8b8; /* Revert to original color */
   }
 }
-
-/* Alpine like transition fade in and fade out when x-show isnt applicable */
+/* MARK: Alpine transition fade in and fade out when x-show isnt applicable */
 /* Fade-In: Hidden to Visible */
 .fade-in-hidden {
   opacity: 0;
@@ -284,7 +170,6 @@ input[type='number'] {
     opacity 0.5s,
     transform 0.5s;
 }
-
 .fade-in-visible {
   opacity: 1;
   transform: scale(1);
@@ -292,7 +177,6 @@ input[type='number'] {
     opacity 0.5s,
     transform 0.5s;
 }
-
 /* Fade-Out: Visible to Hidden */
 .fade-out-visible {
   opacity: 1;
@@ -301,7 +185,6 @@ input[type='number'] {
     opacity 0.3s,
     transform 0.3s;
 }
-
 .fade-out-hidden {
   opacity: 0;
   transform: scale(0.9);
@@ -309,7 +192,7 @@ input[type='number'] {
     opacity 0.3s,
     transform 0.3s;
 }
-/* Table styles */
+/* MARK: Table styles */
 .round-left-border {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -318,8 +201,7 @@ input[type='number'] {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
 }
-
-/* Keyframe for glowing effect */
+/* MARK: Glow Effect */
 @keyframes glowEffect {
   0% {
     box-shadow: 0 0 5px 5px rgba(254, 127, 118, 0) inset; /* Start with no glow */
@@ -342,7 +224,6 @@ input[type='number'] {
     border-radius: 0.375rem;
   }
 }
-
 @keyframes glowEffectDark {
   0% {
     box-shadow: 0 0 5px 5px rgba(254, 127, 118, 0) inset; /* Start with no glow */
@@ -365,33 +246,34 @@ input[type='number'] {
     border-radius: 0.375rem;
   }
 }
-
 /* Apply the animation for the glow effect */
 .add-item-glow {
   animation: glowEffect 500ms ease-out;
 }
-
 .add-item-glow-dark {
   animation: glowEffectDark 500ms ease-out;
 }
-
 .terminator {
   padding: 0 !important;
 }
 
-/* BUTTON light-dark mode styles Tailwind */
+/* MARK: Buttons */
+.tab-button {
+  @apply my-4 flex flex-row items-baseline text-lg font-bold text-white transition duration-300;
+  @apply hover:text-vred-300 active:scale-95;
+  @apply dark:text-neutral-400 dark:hover:text-neutral-50;
+}
+.tab-button-active {
+  @apply !text-vred-400 !underline !decoration-vred-400 !decoration-1;
+  @apply dark:!text-neutral-50 dark:!underline dark:!decoration-vred-300 dark:!decoration-2;
+}
 .butt-style {
   @apply flex items-center rounded-md border border-transparent bg-vdark-600 p-2 text-sm font-medium text-vwhite-50 duration-500;
   @apply hover:border-vred-300 hover:bg-vdark-500 hover:text-vred-400 active:scale-95;
   @apply dark:bg-neutral-700 dark:text-neutral-300 dark:hover:border-vred-300 dark:hover:text-vred-300;
 }
-/* BUTTON light-dark mode styles Tailwind */
-.invo-list-style {
-  @apply flex rounded-md border border-transparent bg-vdark-600 p-3 text-sm font-medium text-vwhite-50 duration-500;
-  @apply hover:border-vred-300 hover:bg-vdark-500 hover:text-vred-400 active:scale-95;
-  @apply dark:bg-neutral-700 dark:text-neutral-300 dark:hover:border-vred-300 dark:hover:text-vred-300;
-}
-/* SEARCH light-dark mode styles Tailwind */
+
+/* MARK:Search Input*/
 .srch-style {
   @apply flex rounded-md border border-vdark-600 bg-vdark-600 p-2 text-sm font-medium text-vwhite-50 transition duration-500 placeholder:text-vwhite-50;
 
@@ -406,12 +288,11 @@ input[type='number'] {
   @apply dark:hover:border-vred-300 dark:hover:text-vred-300 dark:hover:placeholder:text-vred-400 dark:focus:border-vred-300 dark:focus:bg-neutral-600;
 }
 
-/* BORDER CLIPPER for adjusting table body overflowing the header*/
+/* MARK: BORDER CLIPPER for adjusting table body overflowing the header*/
 .border-clipper {
   --border-clipper: #fbf3f3;
   box-shadow: 0 -4px 0 0 var(--border-clipper);
 }
-
 .dark .border-clipper {
   --border-clipper: #27272a;
 }
@@ -433,7 +314,7 @@ input[type='number'] {
   @apply dark:hover:bg-vdark-500;
   @apply dark:focus:bg-vdark-500 dark:focus:ring-vred-300;
 }
-
+/* MARK: Inputs */
 input[type='radio'] {
   appearance: none;
   -webkit-appearance: none;
@@ -453,12 +334,10 @@ input[type='radio'] {
     background 200ms,
     border-color 200ms;
 }
-
 input[type='radio']:focus {
   background-color: #777777;
   outline-color: #777777;
 }
-
 input[type='radio']:checked {
   outline: solid 2px #fea09a;
   outline-offset: 2px;
